--- a/projects/sample/source/sample-plugin/sample-app-lib/src/main/AndroidManifest.xml
+++ b/projects/sample/source/sample-plugin/sample-app-lib/src/main/AndroidManifest.xml
@@ -57,6 +57,18 @@
 
         <activity android:name="com.tencent.shadow.sample.plugin.app.lib.usecases.packagemanager.TestPackageManagerActivity" />
 
+        <activity android:name="com.tencent.shadow.sample.plugin.app.lib.usecases.activity.TestAppCompatActivityOnCreate"
+            android:theme="@style/Theme.AppCompat"
+            />
+
+        <activity android:name="com.tencent.shadow.sample.plugin.app.lib.usecases.fragment.TestDynamicSupportFragmentActivity"
+            android:theme="@style/Theme.AppCompat"
+            />
+
+        <activity android:name="com.tencent.shadow.sample.plugin.app.lib.usecases.fragment.TestXmlSupportFragmentActivity"
+            android:theme="@style/Theme.AppCompat"
+            />
+
         <receiver android:name="com.tencent.shadow.sample.plugin.app.lib.usecases.receiver.MyReceiver">
             <intent-filter>
                 <action android:name="com.tencent.test.action" />
