--- a/buildScripts/gradle/maven.gradle
+++ b/buildScripts/gradle/maven.gradle
@@ -318,7 +318,14 @@ publishing {
         }
     }
     repositories {
-        mavenLocal()
+        maven {
+            credentials {
+                username 'vJ7Gor'
+                password 'eiFE2dNr6t'
+            }
+            url 'https://repo.rdc.aliyun.com/repository/111975-snapshot-adUwbB/'
+        }
+//        mavenLocal()
     }
 }
 
