--- a/projects/sample/maven/plugin-project/build.gradle
+++ b/projects/sample/maven/plugin-project/build.gradle
@@ -1,10 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.shadow_version = '2.0.12-ba5a2501-SNAPSHOT'
+    ext.shadow_version = '2.0.12-60093a47-SNAPSHOT'
     repositories {
         google()
         jcenter()
+        maven {
+            credentials {
+                username 'vJ7Gor'
+                password 'eiFE2dNr6t'
+            }
+            url 'https://repo.rdc.aliyun.com/repository/111975-snapshot-adUwbB/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -18,6 +25,13 @@ allprojects {
         google()
         jcenter()
         mavenLocal()
+        maven {
+            credentials {
+                username 'vJ7Gor'
+                password 'eiFE2dNr6t'
+            }
+            url 'https://repo.rdc.aliyun.com/repository/111975-snapshot-adUwbB/'
+        }
     }
 }
 
