--- a/buildScripts/gradle/maven.gradle
+++ b/buildScripts/gradle/maven.gradle
@@ -336,10 +336,10 @@ publishing {
     }
     repositories {
         maven {
-//            credentials {
-//                username 'vJ7Gor'
-//                password 'eiFE2dNr6t'
-//            }
+            credentials {
+                username ALIMAVEN_USER
+                password ALIMAVEN_PASSWORD
+            }
             url 'https://repo.rdc.aliyun.com/repository/111975-snapshot-adUwbB/'
         }
 //        mavenLocal()
