--- a/projects/sample/maven/host-project/build.gradle
+++ b/projects/sample/maven/host-project/build.gradle
@@ -20,8 +20,8 @@ allprojects {
         mavenLocal()
         maven {
             credentials {
-                username 'vJ7Gor'
-                password 'eiFE2dNr6t'
+                username ALIMAVEN_USER
+                password ALIMAVEN_PASSWORD
             }
             url 'https://repo.rdc.aliyun.com/repository/111975-snapshot-adUwbB/'
         }
